--- a/settings/IFS_CY49R1_v2.toml
+++ b/settings/IFS_CY49R1_v2.toml
@@ -62,6 +62,7 @@ du4          = { config = "data/config_toml_CY48R1/config_du4.toml"           , 
 bc1          = { config = "data/config_toml_CY48R1/config_bc1.toml"           , engine="default", ncname='default', nangle='default'}
 bc2          = { config = "data/config_toml_CY48R1/config_bc2.toml"           , engine="default", ncname='default', nangle='default'}
 bc3          = { config = "data/config_toml_CY48R1/config_bc3.toml"           , engine="default", ncname='default', nangle='default'}
+bc4          = { config = "data/config_toml_CY48R1/config_bc4.toml"           , engine="default", ncname='default', nangle='default'}
 
 su           = { config = "data/config_toml_CY48R1/config_su.toml"            , engine="default", ncname='default', nangle='default'}
 su1          = { config = "data/config_toml_CY48R1/config_su1.toml"           , engine="default", ncname='default', nangle='default'}
@@ -101,7 +102,7 @@ skip=false
 # For processing single aerosols you can add them here (we are adding the names in species section)
 single = [ "ss",                            # Sea-Salt
            "du1", "du2", "du3", "du4",      # Mineral-Dust
-           "bc1", "bc2", "bc3",             # Black-Carbon
+           "bc1", "bc2", "bc3", "bc4",      # Black-Carbon
            "su", "su1", "su2",              # Sulfate
            "ni_fine", "ni_coarse",          # Nitrate
            "NH3_fine",                      # Ammonium
@@ -126,7 +127,7 @@ mixing.organic.ncname = ["organic", "optics_IFS", "C:today"]  # here we have to 
 ifs_cycle  = "49R1"
 netcdfname = "outputnc/store_ifsnc/ifs_CY49R1_v2.nc"
 
-number     = { philic=13, phobic=18}
+number     = { philic=13, phobic=19}
 
 # === HYDROPHOBIC ===
 aer.dd1     = { species="du1"       , type="phobic", position= 1 , bin=3 }
@@ -141,7 +142,7 @@ aer.su_dry  = { species="su"        , type="phobic", position= 14, bin=1 , rhpho
 # New optical models
 aer.dd4     = { species="du4"       , type="phobic", position= 15, bin=3 }
 aer.om_dry  = { species="om"        , type="phobic", position= 18, bin=1 , rhphobic=2} # Check
-
+aer.bc2     = { species="bc4"       , type="phobic", position= 19, bin=1 }
 
 # === HYDROPHILIC ===
 aer.ss      = { species="ss"        , type="philic", position= 1 , bin=3 }
@@ -172,38 +173,39 @@ Cycle """
 # There are species used for philic and phobic, so we need to write in configuration file.
 # description.philic = 
 # description.phobic = (even the phobic RH used)
-description_hydrophobic.1  = " 1: Desert dust, bin 1, 0.03-0.55 micron, (SW) Dubovik et al. 2002 (LW) Fouquart et al. 1987 "
-description_hydrophobic.2  = " 2: Desert dust, bin 2, 0.55-0.90 micron, (SW) Dubovik et al. 2002 (LW) Fouquart et al. 1987 "
-description_hydrophobic.3  = " 3: Desert dust, bin 3, 0.90-20.0 micron, (SW) Dubovik et al. 2002 (LW) Fouquart et al. 1987 "
-description_hydrophobic.4  = " 4: Desert dust, bin 1, 0.03-0.55 micron, Fouquart et al 1987  "
-description_hydrophobic.5  = " 5: Desert dust, bin 2, 0.55-0.90 micron, Fouquart et al 1987  "
-description_hydrophobic.6  = " 6: Desert dust, bin 3, 0.90-20.0 micron, Fouquart et al 1987  "
-description_hydrophobic.7  = " 7: Desert dust, bin 1, 0.03-0.55 micron, Woodward 2001, Table 2  "
-description_hydrophobic.8  = " 8: Desert dust, bin 2, 0.55-0.90 micron, Woodward 2001, Table 2  "
-description_hydrophobic.9  = " 9: Desert dust, bin 3, 0.90-20.0 micron, Woodward 2001, Table 2  " 
-description_hydrophobic.10 = " 10: Hydrophobic organic matter, OPAC (hydrophilic at RH=20%)  "
-description_hydrophobic.11 = " 11: Black carbon, OPAC  "
-description_hydrophobic.12 = " 12: Black carbon, Bond and Bergstrom 2006  "
-description_hydrophobic.13 = " 13: Black carbon, Stier et al 2007  "
-description_hydrophobic.14 = " 14: Stratospheric sulfate (hydrophilic ammonium sulfate at RH 20%%-30%%)"
-description_hydrophobic.15 = " 15: Desert dust, bin 1, 0.03-0.55 micron, Composite (Balkanski et 2007 , Di Baigo 2017, Ryder et al 2019) "
-description_hydrophobic.16 = " 16: Desert dust, bin 2, 0.55-0.90 micron, Composite (Balkanski el 2007 , Di Baigo 2017, Ryder et al 2019) "
-description_hydrophobic.17 = " 17: Desert dust, bin 3, 0.90-20.0 micron, Composite (Balkanski el 2007 , Di Baigo 2017, Ryder et al 2019) "
-description_hydrophobic.18 = " 18: Hydrophobic organic matter, Brown et al 2018 (hydrophilic at RH=20%)  "
+description_hydrophobic.1  = "1: Desert dust, bin 1, 0.03-0.55 micron, (SW) Dubovik et al. 2002 (LW) Fouquart et al. 1987 "
+description_hydrophobic.2  = "2: Desert dust, bin 2, 0.55-0.90 micron, (SW) Dubovik et al. 2002 (LW) Fouquart et al. 1987 "
+description_hydrophobic.3  = "3: Desert dust, bin 3, 0.90-20.0 micron, (SW) Dubovik et al. 2002 (LW) Fouquart et al. 1987 "
+description_hydrophobic.4  = "4: Desert dust, bin 1, 0.03-0.55 micron, Fouquart et al 1987  "
+description_hydrophobic.5  = "5: Desert dust, bin 2, 0.55-0.90 micron, Fouquart et al 1987  "
+description_hydrophobic.6  = "6: Desert dust, bin 3, 0.90-20.0 micron, Fouquart et al 1987  "
+description_hydrophobic.7  = "7: Desert dust, bin 1, 0.03-0.55 micron, Woodward 2001, Table 2  "
+description_hydrophobic.8  = "8: Desert dust, bin 2, 0.55-0.90 micron, Woodward 2001, Table 2  "
+description_hydrophobic.9  = "9: Desert dust, bin 3, 0.90-20.0 micron, Woodward 2001, Table 2  " 
+description_hydrophobic.10 = "10: Hydrophobic organic matter, OPAC (hydrophilic at RH=20%)  "
+description_hydrophobic.11 = "11: Black carbon, OPAC  "
+description_hydrophobic.12 = "12: Black carbon, Bond and Bergstrom 2006  "
+description_hydrophobic.13 = "13: Black carbon, Stier et al 2007  "
+description_hydrophobic.14 = "14: Stratospheric sulfate (hydrophilic ammonium sulfate at RH 20%-30%)"
+description_hydrophobic.15 = "15: Desert dust, bin 1, 0.03-0.55 micron, Composite (Balkanski et 2007 , Di Baggio 2017, Ryder et al 2019) "
+description_hydrophobic.16 = "16: Desert dust, bin 2, 0.55-0.90 micron, Composite (Balkanski el 2007 , Di Baggio 2017, Ryder et al 2019) "
+description_hydrophobic.17 = "17: Desert dust, bin 3, 0.90-20.0 micron, Composite (Balkanski el 2007 , Di Baggio 2017, Ryder et al 2019) "
+description_hydrophobic.18 = "18: Hydrophobic organic matter, Brown et al 2018 (hydrophilic at RH=20%)  "
+description_hydrophobic.19 = "19: Black carbon, Williams 2007  "
 
-description_hydrophilic.1  = " 1: Sea salt, bin 1, 0.03-0.5 micron, OPAC "
-description_hydrophilic.2  = " 2: Sea salt, bin 2, 0.50-5.0 micron, OPAC "
-description_hydrophilic.3  = " 3: Sea salt, bin 3, 5.0-20.0 micron, OPAC "
-description_hydrophilic.4  = " 4: Hydrophilic organic matter, OPAC "
-description_hydrophilic.5  = " 5: Ammonium sulfate (for sulfate), GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/  "
-description_hydrophilic.6  = " 6: Secondary organic aerosol - biogenic, Moise et al 2015  "
-description_hydrophilic.7  = " 7: Secondary organic aerosol - anthropogenic, Moise et al 2015  "
-description_hydrophilic.8  = " 8: Fine mode Ammonium sulfate (for ammonia), GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/  "
-description_hydrophilic.9  = " 9: Fine mode Nitrate, GLOMAP  "
-description_hydrophilic.10 = " 10: Coarse mode Nitrate, GLOMAP "
-description_hydrophilic.11 = " 11: Hydrophilic organic matter, Brown et al 2018 "
-description_hydrophilic.12 = " 12: Sulfate, GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/  "
-description_hydrophilic.13 = " 13: Sulfate, GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/ with modified size distribution  "
+description_hydrophilic.1  = "1: Sea salt, bin 1, 0.03-0.5 micron, OPAC "
+description_hydrophilic.2  = "2: Sea salt, bin 2, 0.50-5.0 micron, OPAC "
+description_hydrophilic.3  = "3: Sea salt, bin 3, 5.0-20.0 micron, OPAC "
+description_hydrophilic.4  = "4: Hydrophilic organic matter, OPAC "
+description_hydrophilic.5  = "5: Ammonium sulfate (for sulfate), GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/  "
+description_hydrophilic.6  = "6: Secondary organic aerosol - biogenic, Moise et al 2015  "
+description_hydrophilic.7  = "7: Secondary organic aerosol - anthropogenic, Moise et al 2015  "
+description_hydrophilic.8  = "8: Fine mode Ammonium sulfate (for ammonia), GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/  "
+description_hydrophilic.9  = "9: Fine mode Nitrate, GLOMAP  "
+description_hydrophilic.10 = "10: Coarse mode Nitrate, GLOMAP "
+description_hydrophilic.11 = "11: Hydrophilic organic matter, Brown et al 2018 "
+description_hydrophilic.12 = "12: Sulfate, GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/  "
+description_hydrophilic.13 = "13: Sulfate, GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/ with modified size distribution  "
 
 contact      = 'Ramiro Checa-Garcia: ramiro.checa-garcia at ecmwf.int'
 institution  = 'European Centre for Medium-Range Weather Forecasts (ECMWF)'
