--- a/data/config_toml_new/config_su_Tim.toml
+++ b/data/config_toml_new/config_su_Tim.toml
@@ -1,6 +1,4 @@
-# SULFATE AEROSOL 
-#
-# info: identical to config_su.toml but scaling is now 1.0
+# SULFATE AEROSOL (For Tim's study on Stratospheric Aerosol)
 #
 # Last update: 22-10-26
 # Contact:     ramiro.checa-garcia@ecmwf.int
@@ -9,8 +7,8 @@
 [distribution]
 # Properties of Size Distribution
 # Units:
-lognormal.r0          = 0.0355
-lognormal.sigma_g     = 2.0
+lognormal.r0          = 0.2
+lognormal.sigma_g     = 1.20
 lognormal.Ntot        = 1.0
 
 [bins]
@@ -29,12 +27,12 @@ rh.growth   = [1.0 ,  1.0,  1.0,  1.0,  1.169,  1.22,  1.282,  1.363,  1.485,  1
 # Optical information
 ri_file     = "data/refr_idx/su_ri_table"
 wl_out_file = "data/wavelengths/wl_out_IFS.txt"
-ext_scaling = 1.000
+ext_scaling = 1.0
 
 [tags]
-opt_model   = "GACP-NoScaling"
-aer_type    = "sulfate_noscaling"
-model       = "Sulfate GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/"
-ifs         = "CY48R1"
+opt_model   = "GACP-TimPSD"
+aer_type    = "sulfate_Tim"
+model       = "Ammonium sulfate (for sulfate), GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/"
+ifs         = "CY46R1"
 revised     = 2022-11-15
 
