--- a/data/config_toml_CY48R1/config_organic_soot.toml
+++ b/data/config_toml_CY48R1/config_organic_soot.toml
@@ -30,6 +30,6 @@ ext_scaling = 1.0
 [tags]
 #opt_model= "OPAC"
 opt_model="External-Mixing"
-aer_type = "organic_mix"
+aer_type = "organic_soot"  # before named organic_mix
 ifs      = "CY46R1"
 revised  = 2022-11-15
