--- a/data/config_toml/config_du3.toml
+++ b/data/config_toml/config_du3.toml
@@ -30,8 +30,9 @@ wl_out_file = "data/wavelengths/wl_out_IFS.txt"
 ext_scaling = 1.0
 
 [tags]
+opt_model= "Fouquart1987"
 aer_type = "dust_Fouquart"
-ifs      = "CY48R1"
-revised  = 2022-10-27
+ifs      = "CY46R1"
+revised  = 2022-11-15
 
 
