--- a/data/config_toml/config_ni_coarse.toml
+++ b/data/config_toml/config_ni_coarse.toml
@@ -31,6 +31,7 @@ ext_scaling = 1.0
 
 
 [tags]
+opt_model   = "GLOMAP"
 aer_type    = "ni_coarse"
-ifs         = "CY48R1"
-revised     = 2022-10-27
+ifs         = "CY46R1"
+revised     = 2022-11-15
