--- a/data/config_toml/config_organic_waso.toml
+++ b/data/config_toml/config_organic_waso.toml
@@ -29,6 +29,7 @@ wl_out_file = "data/wavelengths/wl_out_IFS.txt"
 ext_scaling = 1.0
 
 [tags]
-aer_type = "organic_mix"
-ifs      = "CY48R1"
-revised  = 2022-10-27
+opt_model="External-Mixing"
+aer_type = "organic_waso"   # before named organic_mix
+ifs      = "CY46R1"
+revised  = 2022-11-15
