--- a/data/config_toml/config_ss.toml
+++ b/data/config_toml/config_ss.toml
@@ -33,8 +33,9 @@ ext_scaling = 1.0
 
 
 [tags]
+opt_model   = "OPAC"
 aer_type    = "sea_salt"
-ifs         = "CY48R1"
-revised     = 2022-10-26
+ifs         = "CY46R1"
+revised     = 2022-11-15
 
 
