--- a/data/config_toml/config_su.toml
+++ b/data/config_toml/config_su.toml
@@ -26,12 +26,13 @@ rh.growth   = [1.0 ,  1.0,  1.0,  1.0,  1.169,  1.22,  1.282,  1.363,  1.485,  1
 [optical]
 # Optical information
 ri_file     = "data/refr_idx/su_ri_table"
-wl_out_file = "data/wavelengths/wl_out_TEST_2.txt"
+wl_out_file = "data/wavelengths/wl_out_IFS.txt"
 ext_scaling = 1.375
 
 [tags]
+opt_model   = "GACP"
 aer_type    = "sulfate"
 model       = "Ammonium sulfate (for sulfate), GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/"
-ifs         = "CY48R1"
-revised     = 2022-10-26
+ifs         = "CY46R1"
+revised     = 2022-11-15
 
